--- a/ray_tracer.vcxproj
+++ b/ray_tracer.vcxproj
@@ -109,6 +109,7 @@
     <ClInclude Include="dielectric.h" />
     <ClInclude Include="lambertian.h" />
     <ClInclude Include="material.h" />
+    <ClInclude Include="math.h" />
     <ClInclude Include="metal.h" />
     <ClInclude Include="moving_sphere.h" />
     <ClInclude Include="object.h" />
