--- a/ray_tracer.vcxproj.filters
+++ b/ray_tracer.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="math.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="object_list.h">
+      <Filter>Source Files\objects</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
